--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,8 +6,8 @@ spring:
   cache: false
   encoding: utf-8
  datasource:
-  url: jdbc:mysql://localhost:3306/marketmanage?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-  username: root
+  url: jdbc:mysql://119.29.40.206:3306/marketmanage?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+  username: market
   password: 555913
   driver-class-name: com.mysql.cj.jdbc.Driver
 
