--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,4 +18,7 @@ mybatis:
  config-location: classpath:mybatis-config.xml
  mapper-locations: classpath*:mapper/*Mapper.xml
 
+logging:
+ level:
+  com.fang.marketmanage: debug
 
